Fix btn-chat z-index

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -136,6 +136,7 @@
 	background-color: white;
 	border-radius: 50%;
 	font-size: 1.75rem;
+	z-index: 99;
 }
 
 #domain {
